--- a/src/scss/3-basics/_base.scss
+++ b/src/scss/3-basics/_base.scss
@@ -1,6 +1,6 @@
 // view size small 2/6
 @include screenSizeBp(min-small) {
-  background-color: getColor(pb-header-bg-1);
+  //  background-color: getColor(pb-header-bg-1);
   width: 100%;
 }
 
@@ -14,7 +14,7 @@
 
 // view size xl 5/6
 @include screenSizeBp(min-extralarge) {
-  background-color: getColor(pb-main-bg-1);
+  //  background-color: getColor(pb-main-bg-1);
   width: 500px;
 }
 
