--- a/src/scss/5-modules/_Console.scss
+++ b/src/scss/5-modules/_Console.scss
@@ -21,7 +21,7 @@
 
   // VIEW SIZE [xl, 5/6]
   @include screenSizeBp(min-extralarge) {
-    background-color: getColor(pb-main-bg-1);
+    //    background-color: getColor(pb-main-bg-1);
     width: 500px;
   }
 
